commit git push

--- a/38 Flexbox css/Flexbox.html
+++ b/38 Flexbox css/Flexbox.html
@@ -1,79 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox using css</title>
-    <style>
-        .container {
-            border: 2px solid red;
-            height: 80vh;
-            display: flex;
-            /* justify-content: center; */
-            /* align-items: center; */
-            align-content: flex-start;
-            /* flex-direction: column-reverse; */
-            /* flex-wrap: wrap; */
-            flex-flow: row wrap;
-            /* gap: 20px; */
-            /* row-gap: 20px; */
-            /* column-gap: 10px; */
-            gap: 20px 10px;
-        }
-
-        .item {
-            height: 50px;
-            width: 50px;
-            background-color: blueviolet;
-            border: 2px solid rgb(0, 0, 0);
-            /* margin: 5px; */
-
-            /* this code is centering box numbers */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            flex-grow: 1;
-        }
-
-        .item1{
-            flex-grow: 2;
-        }
-        
-        .item2{
-            order: 101;
-        }
-        .item3{
-            order: 1;
-        }
-
-    </style>
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-        <div class="item item10">10</div>
-        <div class="item item11">11</div>
-        <div class="item item12">12</div>
-        <div class="item item13">13</div>
-        <div class="item item14">14</div>
-        <div class="item item15">15</div>
-        <div class="item item16">16</div>
-        <div class="item item17">17</div>
-        <div class="item item18">18</div>
-        <div class="item item19">19</div>
-        <div class="item item20">20</div>
-    </div>
+    
 </body>
-
 </html>
