updated motion of ball 	modified:   48 Exercise bounce animation/bounce.html

--- a/48 Exercise bounce animation/bounce.html
+++ b/48 Exercise bounce animation/bounce.html
@@ -22,7 +22,7 @@
             bottom: 12px;
             left: 0px;
             animation: catchballX 4s linear infinite ,
-                       catchballY 1s ease-in-out alternate-reverse infinite;
+                       catchballY 1s alternate-reverse infinite;
         }
 
         @keyframes catchballX {
