commit push 	modified:   71 Inserting and removing elements using js/insert_Remove.js 	modified:   71 Inserting and removing elements using js/insert_remove.html

--- a/71 Inserting and removing elements using js/insert_remove.html
+++ b/71 Inserting and removing elements using js/insert_remove.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="box" style="display: flex;">Hey I am a box</div>
         <div class="box">Hey I am a box</div>
     </div>
     <script src="insert_Remove.js"> </script>
